--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    repositories {
+        maven {
+            url "https://cardinalcommerceprod.jfrog.io/artifactory/android"
+            credentials {
+                username 'braintree_team_sdk'
+                password 'AKCp8jQcoDy2hxSWhDAUQKXLDPDx6NYRkqrgFLRc3qDrayg6rrCbJpsKKyMwaykVL8FWusJpp'
+            }
+        }
+    }
 }
 
 dependencies {
@@ -48,4 +57,12 @@ dependencies {
     implementation 'com.facebook.stetho:stetho-okhttp3:1.5.1'
 
     implementation 'com.paypal.sdk:paypal-android-sdk:2.15.3'
+    // implementation 'com.braintreepayments.api:drop-in:3.3.0'
+    //implementation 'com.braintreepayments.api:drop-in:3.+'
+    implementation 'com.braintreepayments.api:drop-in:4.5.0'
+    implementation 'com.android.volley:volley:1.1.1'
+    implementation 'com.google.code.gson:gson:2.8.5'
+
+
+    implementation 'com.loopj.android:android-async-http:1.4.9'
 }
