--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity" />
+        <activity android:name=".OrderActivity"></activity>
+        <activity android:name=".Payment" />
         <activity android:name=".CartDetails" />
         <activity android:name=".ItemDetail" />
         <activity android:name=".EmptyActivity" />
@@ -25,10 +26,11 @@
             android:name=".RestaurantDetail"
             android:label="Restaurant List" />
         <activity android:name=".Map" />
-        <activity android:name=".RestaurantList" />
+        <activity android:name=".RestaurantList"
+            android:label="Restaurant List"/>
         <activity android:name=".AddRestaurant" />
         <activity android:name=".Signup" />
-        <activity android:name=".Payment">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
